# voiceeval-sdk

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
docs/: usage.md
examples/: basic_eval.py  realtime_monitor.py
server/: database.py  main.py  models.py  services.py  utils.py
src/voiceeval/: __init__.py  client.py  context.py  models.py
src/voiceeval/audio/: __init__.py  ingestion.py  transcription.py  vad.py
src/voiceeval/metrics/: __init__.py  base.py  conversation.py  performance.py  voice.py
src/voiceeval/observability/: __init__.py  exporters.py  instrumentation.py  processor.py
src/voiceeval/runners/: __init__.py  offline.py  simulator.py
tests/: test_client.py  test_context.py  test_otel_auth.py
