[project]
name = "voiceeval-sdk"
version = "0.1.7"
description = "Enterprise-grade Observability and Evaluation SDK for Voice Agents"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
    { name = "VoiceEval Team", email = "hello@voiceeval.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
urls.Repository = "https://github.com/voiceeval/voiceeval-sdk"
urls.Homepage = "https://voiceeval.com"
dependencies = [
    "httpx",
    "openai",
    "opentelemetry-api",
    "opentelemetry-exporter-otlp",
    "opentelemetry-instrumentation-anthropic",
    "opentelemetry-instrumentation-google-generativeai",
    "opentelemetry-instrumentation-openai",
    "opentelemetry-sdk",
    "pydantic",
    "python-dotenv",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/voiceeval"]

[dependency-groups]
dev = [
    "pytest",
]
